# libvmod-maxmind-geoip

./: .gitignore  Makefile.am  README.md  build-rpm  configure.ac  libvmod-maxmind-geoip.spec
src/: Makefile.am  geo_functions.c  maxmind.c  vmod_geo.c  vmod_geo.h  vmod_geo.vcc
src/tests/: Makefile.am  test.vtc  test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc  test07.vtc  test08.vtc  test09.vtc  test10.vtc
tests/: Makefile.am  test_ips.c  tests.c
